--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@ layout: default
               {% if paginator.total_pages > 1 %}
               <!-- 分页代码 -->
               {% if paginator.previous_page %}
-            <a href="{{ paginator.previous_page_path | prepend: paginator.baseurl | replace: '//', '/' }}">上一页</a>
+            <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">上一页</a>
         {% endif %}
 
         {% for page in (1..paginator.total_pages) %}
             {% if page == paginator.page %}
               <span class="active">{{ page }}</span>
             {% elsif page == 1 %}
-              <a href="{{ '/index.html' | prepend: paginator.baseurl | replace: '//', '/' }}">{{ page }}</a>
+              <a href="{{ '/index.html' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
             {% else %}
-              <a href="/{{ paginator.paginate_path | prepend: paginator.url | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+              <a href="/{{ paginator.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
             {% endif %}
         {% endfor %}
 
         {% if paginator.next_page %}
-            <a href="{{ paginator.next_page_path | prepend: paginator.baseurl | replace: '//', '/' }}">下一页</a>
+            <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">下一页</a>
         {% endif %}
               {% endif %}
       </div>
